--- a/README.adoc
+++ b/README.adoc
@@ -185,49 +185,11 @@ Next Steps:
 It is useful to coordinate several asynchronous operations in a single handler for certain situations. To 
 facilitate this, Vert.x provides a http://vertx.io/docs/apidocs/io/vertx/core/CompositeFuture.html[CompositeFuture]
 
-[Exercise8.groovy](Exercise8/Exercise8.groovy)
-```groovy
-// .. SNIP ..
-
-class Exercise8 extends GroovyVerticle {
-
-    void start() {
-
-        Future eventVerticleFuture = Future.future()
-        Future anotherVerticleFuture = Future.future()
-
-        CompositeFuture.join(eventVerticleFuture, anotherVerticleFuture).setHandler(this.&deployHandler)
-
-        vertx.deployVerticle('groovy:EventVerticle.groovy', eventVerticleFuture.completer())
-        vertx.deployVerticle('groovy:AnotherVerticle.groovy', anotherVerticleFuture.completer())
-    }
-
-    // .. SNIP ..
-
-    void deployHandler(CompositeFuture cf) {
-        if (cf.succeeded()) {
-            LoggerFactory.getLogger(Exercise8).info('Successfully deployed all verticles')
-
-            // If the EventVerticle successfully deployed, configure and start the HTTP server
-            def router = Router.router(vertx)
-
-            router.get().handler(this.&rootHandler)
-
-            vertx.createHttpServer()            // Create a new HttpServer
-                .requestHandler(router.&accept) // Register a request handler
-                .listen(8080, '127.0.0.1')      // Listen on 127.0.0.1:8080
-        } else {
-            def range = 0..(cf.size() - 1)
-            range.each { x ->
-                if (cf.failed(x)) {
-                    LoggerFactory.getLogger(Exercise8).error('Failed to deploy verticle', cf.cause(x))
-                }
-            }
-            vertx.close()
-        }
-    }
-}
-```
+.Exercise8/Exercise8.java
+[source,"java"]
+----
+include::Exercise8/Exercise8.java[]
+----
 
 Next Steps: (see http://vertx.io/docs/apidocs/io/vertx/core/CompositeFuture.html[CompositeFuture] and 
 http://vertx.io/docs/vertx-core/groovy/#_sequential_composition[Async Coordination])
@@ -248,52 +210,17 @@ use the EventBus to send those objects. **The Shared Local Map has no concurrenc
 the winner. If assurance of ordered writes is required, then the user must implement their own concurrency controls or
 only use data structures which ensure thread safety.**
 
-[Exercise9_1.groovy](Exercise9/Exercise9_1.groovy)
-```groovy
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.lang.groovy.GroovyVerticle
+.Exercise9/Exercise9_1.java
+[source,"java"]
+----
+include::Exercise9/Exercise9_1.java[]
+----
 
-class Exercise9_1 extends GroovyVerticle {
-
-    @Override
-    void start() throws Exception {
-
-        // Deploy AnotherVerticle 10 times
-        (1 .. 10).each {
-            vertx.deployVerticle('groovy:AnotherVerticle.groovy')
-        }
-
-        vertx.setPeriodic(100, this.&showDeployedVerticles)
-    }
-
-    void showDeployedVerticles(Long t) {
-        // Print the list of deployment IDs stored in the shared data local Map
-        LoggerFactory.getLogger(Exercise9_1).info('Polling shared data map')
-        def localMap = vertx.sharedData().getLocalMap('shared')
-        localMap.getDelegate().keySet().each {
-            println "${it} - ${localMap.get(it)}".toString()
-        }
-        println ''
-        println ''
-    }
-}
-```
-
-[AnotherVerticle.groovy](Exercise9/AnotherVerticle.groovy)
-```groovy
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.lang.groovy.GroovyVerticle
-
-class AnotherVerticle extends GroovyVerticle {
-
-    @Override
-    void start() throws Exception {
-        vertx.sharedData().getLocalMap('shared').put(context.deploymentID(), Thread.currentThread().name)
-
-        LoggerFactory.getLogger(AnotherVerticle).info("Deployed AnotherVerticle: ${context.deploymentID()}")
-    }
-}
-```
+.Exercise9/AnotherVerticle.java
+[source,"java"]
+----
+include::Exercise9/AnotherVerticle.java[]
+----
 
 #### Exercise 9.2: Clustered Async Map
 When running in a clustered configuration, sharing objects across Vert.x nodes requires a special feature known as
@@ -302,82 +229,17 @@ http://vertx.io/docs/apidocs/io/vertx/core/spi/cluster/ClusterManager.html[Clust
 ensuring that access to the AsyncMap data is handled in a cluster/thread-safe way. In order to use the AsyncMap, Vert.x 
 **MUST** be started in a clustered mode using `vertx run -cluster <Verticle>`
 
-[Exercise9_2.groovy](Exercise9/Exercise9_2.groovy)
-```groovy
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.lang.groovy.GroovyVerticle
+.Exercise9/Exercise9_2.java
+[source,"java"]
+----
+include::Exercise9/Exercise9_2.java[]
+----
 
-class Exercise9_1 extends GroovyVerticle {
-
-    @Override
-    void start() throws Exception {
-
-        // Get a reference to clusterWide map called 'shared'
-        vertx.sharedData().getClusterWideMap('shared', { res ->
-            if (res.succeeded()) {
-                // Write to the map and await success
-                res.result().put('deployments', Arrays.asList(context.deploymentID()), { res1 ->
-                    // Deploy AnotherVerticle 10 times
-                    (1 .. 10).each {
-                        vertx.deployVerticle('groovy:ClusteredVerticle.groovy')
-                    }
-                })
-            }
-        })
-
-        vertx.setPeriodic(100, this.&showDeployedVerticles)
-    }
-
-    void showDeployedVerticles(Long t) {
-        // Print the list of deployment IDs stored in the shared data local Map
-        LoggerFactory.getLogger(Exercise9_1).info('Polling shared data map')
-
-        // Get reference to clusterWide map called 'shared'
-        def clusteredMap = vertx.sharedData().getClusterWideMap('shared', { res ->
-            if (res.succeeded()) {
-                // Get the 'deployments' value from the AsyncMap
-                res.result().get('deployments', { res1 ->
-
-                    // Iterate over list of values
-                    res1.result().each {
-                        println it
-                    }
-                    println ''
-                    println ''
-                })
-            }
-        })
-    }
-}
-```
-
-[ClusteredVerticle.groovy](Exercise9/ClusteredVerticle.groovy)
-```groovy
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.lang.groovy.GroovyVerticle
-
-class ClusteredVerticle extends GroovyVerticle {
-
-    @Override
-    void start() throws Exception {
-        // Get a reference to clusterWide map called 'shared'
-        vertx.sharedData().getClusterWideMap('shared', { res ->
-            if (res.succeeded()) {
-                // Get the 'deployments' list
-                res.result().get('deployments', { res1 ->
-                    List<String> deploymentList = res1.result()
-                    deploymentList.add(context.deploymentID())
-
-                    // Update the 'deployments' list
-                    res.result().put('deployments', deploymentList, { res2 ->
-                        LoggerFactory.getLogger(ClusteredVerticle).info("Deployed ClusteredVerticle: ${context.deploymentID()}")
-                    })
-                })
-            }
-        })
-    }
-}
-```
+.Exercise9/ClusteredVerticle.java
+[source,"java"]
+----
+include::Exercise9/ClusteredVerticle.java[]
+----
 
 This cluster-wide data coordination is complex, so it is always advisable to send shared data via the EventBus where 
 possible. The ClusterManager and the AsyncMap implementations ensure that access to and writing of clustered resources
@@ -387,37 +249,12 @@ access to read/write clustered data is much slower.
 ### Exercise 10 - A TCP Echo Server
 As a quick introduction to the network server capabilities of Vert.x, Let's implement a TCP Echo Server. An echo server 
 is a network socket server which accepts incoming data and sends the same data back as a response.
- 
-```groovy
-import io.vertx.core.AbstractVerticle
-import io.vertx.core.buffer.Buffer
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.core.net.NetServer
-import io.vertx.core.net.NetServerOptions
-import io.vertx.core.net.NetSocket
 
-class EchoServer extends AbstractVerticle {
-
-    void start() {
-        NetServerOptions opts = new NetServerOptions()
-                .setHost("0.0.0.0")
-                .setPort(1080)
-                .setLogActivity(true)
-
-        NetServer server = vertx.createNetServer(opts)
-        server.connectHandler(this.&connectHandler).listen()
-    }
-
-    void connectHandler(NetSocket socket) {
-            socket.handler(this.&dataHandler.curry(socket))
-    }
-
-    void dataHandler(NetSocket socket, Buffer b) {
-        LoggerFactory.getLogger(EchoServer).info(b.toString())
-        socket.write(b)
-    }
-}
-```
+.Exercise10/Exercise10.java
+[source,"java"]
+----
+include::Exercise10/Exercise10.java[]
+----
 
 There are some new things to learn in this example. For one, there is the introduction of NetServer and it's associated 
 options; but that it mostly self-explanitory. The other thing to make note of is the use of the 
@@ -432,6 +269,7 @@ methods which can handle input types like Int/Float/Short/Unsigned/String/Byte/L
 methods for storing data in the buffer in little-endian byte order.
 
 Next Steps:
+
 * Modify the EchoServer above to take in some text (Latin characters, numbers, spaces, newlines ONLY), ignore non-text, 
 and send back `Hello <text>`.
 
@@ -440,51 +278,14 @@ and send back `Hello <text>`.
 
 Vert.x also has the ability to create UDP servers. Let's see what a UDP echo server would look like in Vert.x:
 
-```groovy
-import io.vertx.core.AsyncResult
-import io.vertx.core.logging.Logger
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.groovy.core.datagram.DatagramPacket
-import io.vertx.groovy.core.datagram.DatagramSocket
-import io.vertx.lang.groovy.GroovyVerticle
-
-class UDPEchoServer extends GroovyVerticle {
-    private final Logger LOG = LoggerFactory.getLogger(UDPEchoServer)
-
-    @Override
-    void start() throws Exception {
-        DatagramSocket socket = vertx.createDatagramSocket()
-
-        socket.listen(1080, "0.0.0.0", { res ->
-            socketHandler(res)
-        })
-    }
-
-    void socketHandler(AsyncResult<DatagramSocket> res) {
-        if (res.succeeded()) {
-            // Successfully received a datagram
-            def socket = res.result()
-            socket.handler(this.&datagramHandler.curry(socket))
-        }
-    }
-
-    void datagramHandler(DatagramSocket socket, DatagramPacket p) {
-        socket.send(p.data(), p.sender().port(), p.sender().host(), { sent ->
-            sendHandler(sent)
-        })
-    }
-
-    void sendHandler(sent) {
-        if (sent.succeeded()) {
-            LOG.info("SUCCESS")
-        } else {
-            LOG.error("FAILED")
-        }
-    }
-}
-```
+.Exercise11/Exercise11.java
+[source,"java"]
+----
+include::Exercise11/Exercise11.java[]
+----
 
 Next Steps:
+
 * Modify the EchoServer above to take in some text (Latin characters, numbers, spaces, newlines ONLY), ignore non-text, 
 and send back `Hello <text>`.
 
@@ -493,34 +294,14 @@ and send back `Hello <text>`.
 HTTP is a mainstay of software these days, so being able to make and handle HTTP requests is vital. Let's see how Vert.x
 make HTTP requests in an asynchronous manner:
 
-```groovy
-import io.vertx.core.logging.Logger
-import io.vertx.core.logging.LoggerFactory
-import io.vertx.groovy.core.http.HttpClientResponse
-import io.vertx.lang.groovy.GroovyVerticle
-
-class Exercise12 extends GroovyVerticle {
-
-    private static final Logger LOG = LoggerFactory.getLogger(Exercise12)
-
-    @Override
-    void start() throws Exception {
-        def client = vertx.createHttpClient()
-                          .getNow('www.google.com', '/', this.&responseHandler)
-    }
-
-    void responseHandler(HttpClientResponse response) {
-        if (response.statusCode()==200 && response.statusMessage()=='OK') {
-            LOG.info('Success!')
-        } else {
-            LOG.warn("Got ${response.statusCode()} as the response code.")
-        }
-        vertx.close()
-    }
-}
-```
+.Exercise12/Exercise12.java
+[source,"java"]
+----
+include::Exercise12/Exercise12.java[]
+----
 
 Next Steps
+
 * Make an HTTP GET request which uses HTTP Basic Authentication
 * Make an HTTP POST request which sends a JSON body
 
@@ -545,16 +326,17 @@ http://vertx.io/docs/vertx-core/groovy/#_dns_client[DNSClient]. The DNS client r
 up to you to read the documentation and use it.
 
 Next Steps:
+
 * Modify the solution for Exercise 13 so that you can 
   http://vertx.io/docs/vertx-core/groovy/#_the_vertx_command_line[pass in] a `config.json` file from which the 
   application will http://vertx.io/docs/vertx-core/groovy/#_passing_configuration_to_a_verticle[read] the settings 
   for:
-  * HTTP client host
-  * HTTP client URI
-  * HTTP client port
-  * HTTP client SSL enable/disable
-  * DNS hostname to be resolved
-  * Filename to be read
+** HTTP client host
+** HTTP client URI
+** HTTP client port
+** HTTP client SSL enable/disable
+** DNS hostname to be resolved
+** Filename to be read
 
 ### Exercise 14
 
@@ -563,58 +345,11 @@ that routes can be *chained*. What this means is that if you have a path which s
 under that path will all do some of the same tasks, you can extract those operations into an earlier route which then
 calls `RoutingContext.next()` and the request will be processed by other routes which might match. Here's an example:
 
-```groovy
-import io.vertx.core.json.JsonObject
-import io.vertx.groovy.ext.web.Router
-import io.vertx.groovy.ext.web.RoutingContext
-import io.vertx.lang.groovy.GroovyVerticle
-
-import static io.netty.handler.codec.http.HttpResponseStatus.OK
-import static io.netty.handler.codec.http.HttpResponseStatus.UNAUTHORIZED
-
-class Exercise14 extends GroovyVerticle {
-
-    @Override
-    void start() throws Exception {
-        Router router = Router.router(vertx)
-
-        router.route().handler(this.&authHandler)
-        router.route('/rest/*').handler(this.&restHandler)
-        router.get('/rest/customer/:id').handler(this.&customerByIdHandler)
-
-        vertx.createHttpServer().requestHandler(router.&accept).listen(8080, '0.0.0.0')
-    }
-
-    void authHandler(RoutingContext ctx) {
-        // Do something to validate authentication
-        ctx.put('authenticated', true)
-        ctx.next()
-    }
-
-    void restHandler(RoutingContext ctx) {
-        // All REST requests will have certain common requirements
-
-        ctx.response()
-            .putHeader('Content-Type', 'application/json') // Set the response Content-Type to application/json
-            .putHeader('Cache-Control', 'nocache') // Disable caching for browsers which respect this header
-            .putHeader('Expires', 'Tue, 15 Nov 1994 12:45:26 GMT') // Set some expiry date in the past to help prevent caching
-        ctx.next()
-    }
-
-    void customerByIdHandler(RoutingContext ctx) {
-        if (ctx.get('authenticated')) {
-            // The 'authenticated' value is set in the authHandler method/route, and so it should be present here!!
-            ctx.response().setStatusCode(OK.code())
-                          .setStatusMessage(OK.reasonPhrase())
-                          .end(new JsonObject([:]).encodePrettily())  // The headers set in restHandler are already set as well!
-        } else {
-            ctx.response().setStatusCode(UNAUTHORIZED.code())
-                          .setStatusMessage(UNAUTHORIZED.reasonPhrase())
-                          .end(new JsonObject([:]).encodePrettily())  // The headers set in restHandler are already set as well!
-        }
-    }
-}
-```
+.Exercise14/Exercise14.java
+[source,"java"]
+----
+include::Exercise14/Exercise14.java[]
+----
 
 In this, admittedly contrived, example; we see that any request which matches '/rest/customer/:id' will match all of the
 previous routes as well. Since the handlers for each of those routes are calling `RoutingContext.next()` on the 
